# xdg-mime-gui

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  io.github.tomas_barros1.DefaultApps.desktop
.github/workflows/: build.yml
docs/: SPECS.md
locales/: en.json  pt_BR.json
src/: application.rs  i18n.rs  main.rs  window.rs
src/models/: application.rs  mime_type.rs  mod.rs
src/services/: app_discovery.rs  default_apps.rs  mime_database.rs  mod.rs  observer.rs
src/ui/pages/: all.rs  internet.rs  media.rs  mod.rs  office.rs  page_builder.rs  system.rs
src/ui/widgets/: app_dialog.rs  app_row.rs  mod.rs  search.rs
