[package]
name = "xdg-mime-gui"
version = "1.0.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
gio = { version = "0.22", features = ["v2_82"] }
glib = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
